# FastAPI-Wishlist

./: Jenkinsfile  Jenkinsfile.yaml  docker-compose.yml
app/: Dockerfile  database.py  main.py  pyproject.toml
