[tool.poetry]
name = "wish-list"
version = "0.1.0"
description = ""
authors = ["Shayan-9248 <shayan.aimoradii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.18.2"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.39"
passlib = "^1.7.4"
black = "^22.6.0"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^1.9.1"}
python-multipart = "^0.0.5"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
Faker = "^13.15.1"
pytest = "^7.1.2"
prometheus-fastapi-instrumentator = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
