[project]
name = "wishlist"
version = "0.1.0"
description = ""
authors = [
    {name = "shayan"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "faker (>=40.1.0,<41.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
